# robotics

./: SPKF.rar
Aerial_Robotics/Advanced_Topics/: controller.m  helix.mat  line.mat  traj_gen.mat  traj_generator-my.m  traj_generator.m
Aerial_Robotics/Geomotry_and_Mechanics/: controller.m  hover.mat  step.mat
Aerial_Robotics/Planning_and_Control/: controller.m  line.mat  sine.mat
CANopen-Project/: Architecture Diagram.odg
Computional_Motion_Planning/Artificial_Potential_Field_Methods/: GradientBasedPlanner.m  GradientBasedPlanner.mat
Computional_Motion_Planning/Configuration_Space/: DijkstraTorus.m  DijkstraTorus.mat  Triangle.mat
Computional_Motion_Planning/Graph_based_Plan_Methods/: AStarGrid.m  DijkstraGrid.m  DijkstraSubmission.mat  TestScript1.m
Computional_Motion_Planning/Sampling_based_Planning_Methods/: PRM.m  PRM.mat  triangle_intersection.m
Estimation_and_Learning/Bayesian_Estimation_Localization/: particleLocalization.m
Estimation_and_Learning/Bayesian_Estimation_Target_Tracking/: SubmissionFilter.mat  kalmanFilter.m
hardware/arduino/: CMakeLists.txt  package.xml
hardware/arduino/include/avidbots_arduino/: arduino_serial.h
hardware/arduino/launch/: arduino_serial.launch
hardware/arduino/src/: arduino_serial.cpp  arduino_serial_node.cpp
hardware/hourmeter/: CMakeLists.txt  package.xml
hardware/hourmeter/include/avidbots_hourmeter/: hourmeter.h
hardware/hourmeter/launch/: hourmeter.launch
hardware/hourmeter/src/: hourmeter.cpp  hourmeter_node.cpp
hardware/mc_driver/: CMakeLists.txt  package.xml
hardware/mc_driver/include/avidbots_mc_driver/: avidbots_mc_driver.h  avidbots_mc_driver_factory.h  bicycle_mc_driver.h  kiwi_mc_driver.h  mc_voltage_helper.h  motor_driver.h  roboteq_ch_position_motor.h  roboteq_cleaning_head_motor.h  roboteq_drive_system_motor.h  roboteq_nxtgen_can.h  roboteq_nxtgen_can_open_constants.h  roboteq_sq_position_motor.h  roboteq_steer_system_motor.h
hardware/mc_driver/launch/: fake_mc_driver.launch  mc_driver.launch  simulated_free_wheel.launch
hardware/mc_driver/scripts/: fake_mc_driver.py
hardware/mc_driver/src/: avidbots_mc_driver_factory.cpp  bicycle_mc_driver.cpp  kiwi_mc_driver.cpp  mc_driver.cpp  mc_driver_node.cpp  mc_voltage_helper.cpp  roboteq_ch_position_motor.cpp  roboteq_cleaning_head_motor.cpp  roboteq_drive_system_motor.cpp  roboteq_nxtgen_can.cpp  roboteq_sq_position_motor.cpp  roboteq_steer_system_motor.cpp  simulated_free_wheel.cpp  test_can_open.cpp
hardware/mcu_driver/: CMakeLists.txt  package.xml
hardware/mcu_driver/include/avidbots_mcu_driver/: avidbots_can_open.h  mcu_driver.h  mcu_driver_factory.h  shiny_mcu_driver.h  wheely_mcu_driver.h
hardware/mcu_driver/launch/: mcu_driver.launch
hardware/mcu_driver/src/: avidbots_can_open.cpp  mcu_driver.cpp  mcu_driver_factory.cpp  mcu_driver_node.cpp  shiny_mcu_driver.cpp  wheely_mcu_driver.cpp
hardware/pcl_calibration/: CMakeLists.txt  package.xml
hardware/pcl_calibration/src/: calibrate.cpp  calibrate_laser.cpp  calibrate_laser_wall.cpp
hardware/pcl_calibration/src/pcl_calibration/: calibrate_camera_manual.py
hardware/radio/: CMakeLists.txt  package.xml
hardware/radio/include/avidbots_radio/: radio_manager.h  snmp_constants.h  snmp_manager.h  telnet_constants.h  telnet_manager.h  util_manager.h
hardware/radio/launch/: avidbots_radio.launch
hardware/radio/src/: avidbots_radio_node.cpp  radio_manager.cpp  snmp_manager.cpp  telnet_manager.cpp  util_manager.cpp
hardware/teleop_joy/: CMakeLists.txt  package.xml
hardware/teleop_joy/include/avidbots_teleop_joy/: avidbots_led_joy.h  avidbots_teleop_joy.h  avidbots_teleop_joy_control.h
hardware/teleop_joy/launch/: teleop_joy.launch
hardware/teleop_joy/src/: avidbots_led_joy.cpp  avidbots_led_joy_node.cpp  avidbots_teleop_joy.cpp  avidbots_teleop_joy_control.cpp  avidbots_teleop_joy_node.cpp
imu_kf_marg/: MARG.ino  MoPa_IMU.ino
safety_diagnostics/diagnostics/: CMakeLists.txt  package.xml
safety_diagnostics/diagnostics/include/avidbots_diagnostics/: avidbots_diagnostics.h  avidbots_diagnostics_constants.h  camera_states_manager.h  global_diagnostics_manager.h  mc_states_manager.h  mcu_states_manager.h  sensor_safety_states_manager.h  states_manager.h  urg_states_manager.h
safety_diagnostics/diagnostics/launch/: avidbots_diagnostics.launch
safety_diagnostics/diagnostics/src/: .avidbots_diagnostics_node.cpp.swp  avidbots_diagnostics.cpp  avidbots_diagnostics_node.cpp  camera_states_manager.cpp  global_diagnostics_manager.cpp  mc_states_manager.cpp  mcu_states_manager.cpp  sensor_safety_states_manager.cpp  states_manager.cpp  urg_states_manager.cpp
safety_diagnostics/safety_monitor/: CMakeLists.txt  package.xml
safety_diagnostics/safety_monitor/include/avidbots_safety_monitor/: sm_constants.h  sm_manager.h  sm_ros_interface.h
safety_diagnostics/safety_monitor/include/avidbots_safety_monitor/messengers/: diagnostics_messenger.h  low_voltage_messenger.h  safetyzone_messenger.h
safety_diagnostics/safety_monitor/include/avidbots_safety_monitor/safety_zone/: sm_dangerzone.h  sm_expsafetyzone.h  sm_safetyzone_base.h
safety_diagnostics/safety_monitor/include/avidbots_safety_monitor/states/: dangerzone_state.h  diagnostics_state.h  estop_state.h  exp_safetyzone_state.h  idle_state.h  low_voltage_state.h  state_base.h
safety_diagnostics/safety_monitor/launch/: safety_monitor.launch
safety_diagnostics/safety_monitor/src/: sm_manager.cpp  sm_node.cpp  sm_ros_interface.cpp
safety_diagnostics/safety_monitor/src/messengers/: diagnostics_messenger.cpp  low_voltage_messenger.cpp  safetyzone_messenger.cpp
safety_diagnostics/safety_monitor/src/safety_zone/: sm_dangerzone.cpp  sm_expsafetyzone.cpp  sm_safetyzone_base.cpp
safety_diagnostics/safety_monitor/src/states/: dangerzone_state.cpp  diagnostics_state.cpp  estop_state.cpp  exp_safetyzone_state.cpp  idle_state.cpp  low_voltage_state.cpp  state_base.cpp
safety_diagnostics/safety_monitor/test/: safety_zone_test.cpp  safety_zone_test.launch
safety_diagnostics/safety_monitor/visualization/: safetyzone.viz
(+3175 files in other folders)
