<?xml version="1.0"?>
<package>
  <name>avidbots_radio</name>
  <version>0.0.0</version>
  <description>The avidbots_radio package</description>

  <maintainer email="feng.cao@avidbots.com">Feng</maintainer>


  <license>Avidbots Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>avidbots_msgs</build_depend>
  <build_depend>avidbots_library</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>libsnmp-dev</build_depend>
  
  <run_depend>avidbots_msgs</run_depend>
  <run_depend>avidbots_library</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  

  </export>
</package>
