<?xml version="1.0"?>
<package>
  <name>avidbots_teleop_joy</name>
  <version>0.0.0</version>
  <description>The avidbots_teleop_joy package</description>

  <maintainer email="pablo@avidbots.com">Pablo</maintainer>


  <license>Avidbots</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>avidbots_msgs</build_depend>
  <build_depend>avidbots_library</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>roslint</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>avidbots_msgs</run_depend>
  <run_depend>avidbots_library</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>    
  

  <export>
  

  </export>
</package>
